<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.awidesky</groupId>
	<artifactId>LiivQuizCrawler</artifactId>
	<version>2.4</version>
	<name>LiivQuizCrawler</name>
	
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<build.dir>${project.build.directory}/LiivQuizCrawler</build.dir>
		<jre_modules>java.base,java.datatransfer,java.xml,java.prefs,java.desktop</jre_modules>
	</properties>

	<profiles>
		<profile>
			<id>jlink-if-not-exist</id>
			<activation>
				<file>
					<missing>${basedir}/jre/release</missing>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<phase>validate</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jlink</executable>
									<workingDirectory>${project.basedir}</workingDirectory>
									<arguments>
										<argument>--verbose</argument>
										<argument>--output</argument>
										<argument>jre</argument>
										<argument>--compress=2</argument>
										<argument>--strip-debug</argument>
										<argument>--no-header-files</argument>
										<argument>--no-man-pages</argument>
										<argument>--add-modules</argument>
										<argument>${jre_modules}</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>${build.dir}</outputDirectory>
					<archive>
						<manifest>
							<mainClass>io.github.awidesky.liivQuizCrawler.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<appendAssemblyId>false</appendAssemblyId>
					<finalName>livquiz</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>launch4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<jar>livquiz.jar</jar>
							<outfile>${build.dir}/livquiz.exe</outfile>
							<dontWrapJar>true</dontWrapJar>
							<headerType>gui</headerType>
							<errTitle></errTitle>
							<cmdLine></cmdLine>
							<chdir></chdir>
							<priority>normal</priority>
							<downloadUrl>https://adoptium.net/</downloadUrl>
							<stayAlive>false</stayAlive>
							<restartOnCrash>false</restartOnCrash>
							<manifest></manifest>
							<classPath>
								<mainClass>io.github.awidesky.liivQuizCrawler.Main</mainClass>
							</classPath>
							<jre>
								<path>jre</path>
								<requires64Bit>true</requires64Bit>
								<minVersion>1.17.0</minVersion>
								<maxVersion></maxVersion>
								<requiresJdk>false</requiresJdk>
								<requires64Bit>false</requires64Bit>
							</jre>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-jre</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${build.dir}/jre</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/jre</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>